# AgBioML-Challenge

./: .gitignore  README.md  protocol.md  pyproject.toml  setup.py
challenges/: Dockerfile  README.md
challenges/01_basic_epigenetic_clock/: README.md  task.yaml
challenges/01_basic_epigenetic_clock/data/: split_data.py
challenges/01_basic_epigenetic_clock/scripts/: compile_multirun_eval.py  evaluate.py  prediction_template.py  test_evaluation_workflow.py
conf/: config.yaml
conf/agents/: default.yaml  minimal.yaml
conf/docker/: cpu_only.yaml  default.yaml  extended_timeout.yaml
conf/experiment/: multirun_comparison.yaml  production.yaml  quick_test.yaml
conf/resources/: README.md  cloud_gpu.yaml  default.yaml  high_performance.yaml  long_running.yaml
scripts/: create_challenge.py  validate_challenges.py
src/: README.md
src/autobioml/: __init__.py  __main__.py  cli.py
src/autobioml/agents/: __init__.py  base.py
src/autobioml/config/: __init__.py  agents.yaml  loader.py  schemas.py  workflow_templates.yaml
src/autobioml/evaluation/: __init__.py  public_evaluator.py
src/autobioml/pipeline/: __init__.py  metrics.py  runner.py
src/autobioml/tools/: __init__.py  base.py  evaluation.py  notebook.py  research.py
src/bioagents/: __init__.py  __main__.py  cli.py
src/bioagents/agents/: __init__.py  base.py  factory.py
src/bioagents/config/: __init__.py  agents.yaml  loader.py  schemas.py  workflow_templates.yaml
src/bioagents/evaluation/: __init__.py  public_evaluator.py
src/bioagents/pipeline/: __init__.py  metrics.py  runner.py
src/bioagents/tools/: __init__.py  base.py  evaluation.py  notebook.py  research.py
src/biomlagents/: __init__.py  __main__.py  cli.py
src/biomlagents/agents/: __init__.py  base.py
src/biomlagents/config/: __init__.py  loader.py  schemas.py  workflow_templates.yaml
src/biomlagents/evaluation/: __init__.py  public_evaluator.py
src/biomlagents/pipeline/: __init__.py  metrics.py  runner.py
src/biomlagents/tools/: __init__.py  base.py  evaluation.py  notebook.py  research.py
tests/: test_pipeline_metrics.py
