[project]
name = "autobioml"
version = "0.1.0"
description = "A framework for autonomous biomedical ML research agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.0",
    "hydra-joblib-launcher>=1.2.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "docker>=6.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
    "ipdb>=0.13.13",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
    "autogen-agentchat",
    "autogen-core",
    "autogen-ext[docker,openai]",
]

[project.scripts]
autobioml = "autobioml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autobioml"]

[tool.uv.sources]
autogen-agentchat = { git = "https://github.com/AIxBio/autogen.git", subdirectory = "python/packages/autogen-agentchat" }
autogen-core = { git = "https://github.com/AIxBio/autogen.git", subdirectory = "python/packages/autogen-core" }
autogen-ext = { git = "https://github.com/AIxBio/autogen.git", subdirectory = "python/packages/autogen-ext" }

